# ludic

./: .gitignore  AGENTS.md  CLAUDE.md  CONSIDERATIONS.md  FINDINGS-CLAUDE.md  HANDOFF.md  MULTI-SPEC.md  PLAN-v2.md  README.md  RM_GUIDELINES.md  RM_PLAN.md  SPEC.md  pyproject.toml  walkthrough.md
.claude/: settings.json
.handoffs/planner-to-doer/: 20260121-142222.md  20260121-142241.md  20260121-142305.md
environments/: __init__.py  gsm8k.py  math.py  tic_tac_toe.py
examples/: pvg_reward_usage.py  rejection_sampling.py  rollout_engine_example.py  train_code_gen.py  train_example.py
examples/code_exec/: MIGRATION.md  README.md  benchmark_batch.py  demo_sneaky_inference.py  diagnose_podman.py  prepare_env.sh  smoke_test_isambard.py  smoke_test_isambard.slurm  sneaky_inference_isambard.slurm  test_vllm_isambard.slurm  train_apps.py  train_apps_isambard.slurm  train_sneaky.py
examples/code_exec/hpc/: train_apps_isambard.slurm
examples/envs/: tic_tac_toe.py
examples/fsdp2_training/: README.md  train_math_fsdp2.py
examples/gsm8k/: README.md  eval_gsm8k_vllm.py  train_gsm8k.py
examples/pipeline_rl/: run_actor.py  run_trainer.py
examples/pvg/: fetch_pvg_models.sh  memory_calculator.py  train_pvg.py  train_pvg_isambard.slurm
examples/pvg/components/: bootstrap.py  metrics_checkpoint.py  mint.py  prompt_test.py  sync_prover.py  sync_verifier.py  train_prover.py  train_verifier.py
examples/pvg/configs/: apps_pvg.yaml
examples/reward_model/: README.md  RM-2026.md  analyze_rm_experiments.py  cold_start_rlhf.py  diagnose_rm_logs.py  run_rm_experiments.slurm  run_rm_tests.slurm  run_rm_v3_experiments.slurm  run_rm_v4_experiments.slurm  run_rm_v5_experiments.slurm  smoke_test_rm.slurm  train_rm_bradley_terry.py  train_rm_isambard.slurm
examples/tic_tac_toe/: README.md  eval_tic_tac_toe_vllm.py  generate_synth_data.py  sft_tic_tac_toe.py  train_tic_tac_toe.py  train_tic_tac_toe_tinker.py
features/CodeExecEnv/: CODE_DATASET_SPEC.md  CODE_SAMPLE.md  plan.md
integrations/tinker/: __init__.py  client.py  rollouts_to_datums.py
research/: context-notes.md  plan.md
research/papers/arXiv-dapo/: arXiv-2503.14476.md  arXiv-2503.14476_meta.json
research/papers/arXiv-pvg/0.abstract/: abstract.md
research/papers/arXiv-pvg/1.introduction/: introduction.md
research/papers/arXiv-pvg/2.related_work/: related_work.md
research/papers/arXiv-pvg/3.setup/: setup.md
research/papers/arXiv-pvg/4.results/: results.md
research/papers/arXiv-pvg/5.alternative_rewards/: alternative_rewards.md
research/papers/arXiv-pvg/6.discussion/: discussion.md
research/papers/arXiv-rl_zvp/: arXiv-2509.21880.md  arXiv-2509.21880_meta.json
research/papers/arXiv-scalerl/: arXiv-2510.13786v1_meta.json
research/papers/arXiv-tricks_or_traps_part1/: arXiv-2508.08221_meta.json
research/papers/arXiv-vanilla_grpo/: arXiv-2402.03300.md  arXiv-2402.03300_meta.json
research/papers/arXiv:scalerl/: arXiv:2510.13786v1.md
research/papers/arXiv:tricks_or_traps_part1/: arXiv:2508.08221.md
scripts/: README.md  calibrate_micro_batch.py  run_pvg_bootstrap.slurm  run_pvg_gpu_tests.slurm  run_pvg_metrics_checkpoint.slurm  run_pvg_mint.slurm  run_pvg_prompt_test.slurm  run_pvg_sync_prover.slurm  run_pvg_sync_verifier.slurm  run_pvg_train_prover.slurm  run_pvg_train_verifier.slurm  run_pvg_verification.slurm  similarity_experiments.py  visualize_logs.py
src/ludic/: env.py  hf_cache.py  interaction.py  types.py
src/ludic/agent/: base.py
src/ludic/agents/: __init__.py  base_agent.py  react_agent.py  tool_agent.py
src/ludic/context/: base.py  full_dialog.py  truncated_thinking.py
src/ludic/distributed/: __init__.py  interfaces.py  publisher.py
src/ludic/distributed/adapters/: vllm.py  (+1 more)
src/ludic/envs/: code_gen_env.py  env.py
src/ludic/eval/: __init__.py  cli.py  core.py  evaluator.py
src/ludic/inference/: __init__.py  chat_template.py  client.py  request.py  reward_types.py  tool_parser.py  vllm_client.py  vllm_reward_server.py  vllm_server.py  vllm_utils.py
src/ludic/interaction/: __init__.py  info.py  multi_agent.py  rewards.py  single_agent.py  step_collector.py
src/ludic/pvg/: SEC3.md  __init__.py  algorithm.py  config.py  credit.py  data.py  irm.py  manifest.py  metrics.py  minting.py  orchestrator.py  prover_env.py  prover_trainer.py  rewards.py  scoring.py  verifier_trainer.py  vllm_setup.py
src/ludic/sandbox/: pool.py  problems.py  protocol.py
src/ludic/training/: __init__.py  algorithm.py  chat_template_utils.py  checkpoint.py  classification_metrics.py  config.py  credit_assignment.py  filters.py  hardware.py  loggers.py  loss.py  orchestrator.py  preference_utils.py  reward_credit.py  reward_scorer.py  rm_trainer.py  stats.py  trainer.py  types.py
src/ludic/utils/: dashboard.py  setup_vllm.py
tests/: _mocks.py  conftest.py  test_algorithm_preprocess.py  test_batch_execution.py  test_bradley_terry_loss.py  test_chat_template.py  test_checkpoint.py  test_code_exec_adapters.py  test_code_exec_async_protocol.py  test_code_exec_cache.py  test_code_exec_env.py  test_code_exec_podman.py  test_code_exec_runners.py  test_code_exec_types.py  test_credit_assignment.py  test_eval_items.py  test_flash_attention.py  test_gmpo.py  test_incomplete_completion.py  test_interaction.py  test_loggers.py  test_loss.py  test_micro_batching.py  test_multi_agent_env_truncation.py  test_orchestrator.py  test_ppo_loss_and_preprocess.py  test_preference_batching.py  test_preference_utils.py  test_public_api_imports.py  test_rank0_only_publisher.py  test_react_agent.py  test_rollout_engine.py  test_shared_context_perf.py  test_stats.py  test_step_collector.py  test_tool_agent.py  test_tool_parser.py  test_tool_token_masking.py  test_trainer.py  test_trunc_think.py  (+1 more)
tests/integration/: test_code_exec_docker.py  test_grpo_e2e.py  test_react_agent_vllm.py  test_trainer_stats_weighting.py  test_vllm_client.py  test_vllm_logprobs.py
tests/pvg/component/: test_pvg_components.py
tests/pvg/configs/: apps_pvg_test.yaml
(+50 files in other folders)
